# operation-research-rep

./: .gitmodules  MS-daily.csv  MS-inventory.csv  README  README.md  main.py  setup.py  simplex.ipynb  states.csv
.ipynb_checkpoints/: Untitled1-checkpoint.ipynb  simplex-checkpoint.ipynb
Task_2/: Task_2_time_s.ipynb  Task_2_time_s_.ipynb
Task_3/: task-3.ipynb
Task_3/output/: MS-b2-output-daily_inv.csv  MS-b2-steal.csv  MS-m1-output-daily_inv.csv  MS-m1-steal.csv  MS-s1-output-daily_inv.csv  MS-s1-steal.csv  MS-s3-output-daily_inv.csv  MS-s4-steal.csv  MS-s5-output-daily_inv.csv  MS-s5-steal.csv  pivot_table.csv
gladkov-kislyuk-nazarenko/: main.py  nash .py  tests.py
gladkov-kislyuk-nazarenko/fun/: setup.py
gladkov-kislyuk-nazarenko/task1/: Test.py
gladkov-kislyuk-nazarenko/task2/: task222.ipynb
gladkov-kislyuk-nazarenko/task3/: MS-s4-inventory.csv  MS-s4-supply.csv  MS-s5-inventory.csv  MS-s5-supply.csv  main.py
nash_equilibrium_pkg/: __init__.py  nash.py  plot.py  start_nash.py  unit_tests.py
submissions/task2/: README_Task2_timeSeries_src.tex  Time-series.ipynb  model.py
submissions/task2/siverina-li-zhou/game_theory_utils/: MANIFEST.in  README.tex  setup.cfg
submissions/task2/siverina-li-zhou/game_theory_utils/game_theory_utils/: __init__.py  module1.py
submissions/task2/siverina-li-zhou/game_theory_utils/game_theory_utils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
submissions/task3/: Task_3.ipynb  applepen.ipynb  (+2 more)
task4/: Analysis.ipynb  presentation.tex
zakharovharazyanschegolev.egg-info/: PKG-INFO  SOURCES.txt
(+81 files in other folders)
