[metadata]
name = game_theory_utils
version = attr: wheel.__version__
description = A built-package format for Python
long_description = file: README.md
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: System :: Archiving :: Packaging
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
author = SLZ
author_email = yunyizhou97@gmail.com
maintainer =
maintainer_email =
url = https://github.com/yunyi97
project_urls =
    Documentation =
    Changelog =
    Issue Tracker =
keywords = game theory
license = MIT

[options]
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
zip_safe = False

[options.extras_require]
test =
    pytest >= 3.0.0
    pytest-cov

[options.entry_points]
console_scripts =
    test_start=Test.command:start
distutils.commands =
    bdist_wheel = wheel.bdist_wheel:bdist_wheel

[bdist_wheel]
# use py2.py3 tag for pure-python dist:
universal = 1
